# novachains

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindMozjs.cmake  FindNspr.cmake  FindOpenSSLMac.cmake  novaconf.cmake  novaenv.cmake  novaoption.cmake  novatool.cmake
docs/: NOVA Design_V1_1.pptx  Nova Module Design.pptx
misc/autogen/: CMakeLists.txt  buildgen.cpp  buildgen.h  config.h  dbConfForWeb.cpp  dbConfForWeb.h  filenamegen.cpp  filenamegen.h  js2code.cpp  js2code.hpp  main.cpp  optgen.cpp  optgen.h  options.cpp  oss.c  ossMem.cpp  rcgen.cpp  rcgen.h  tracegen.cpp  tracegen.h  util.cpp  util.h  ver_conf.h  ver_conf.h.in  vergen.cpp  vergen.h
misc/autogen/fileList/: fileListGenerator.cpp
misc/autogen/options/: optGeneratorBase.cpp  optGeneratorBase.hpp
misc/autogen/rc/: rcGenForC.cpp  rcGenForCPP.cpp  rcGenForJS.cpp  rcGeneratorBase.cpp  rcGeneratorBase.hpp
misc/autogen/spidermonkey/: codeGenerator.cpp  codeGenerator.hpp
misc/autogen/trace/: traceGenerator.cpp  traceGenerator.hpp
misc/autogen/version/: versionGenForBuild.cpp
misc/resource/: optOtherInfoForWeb.xml  optlist.xml  rclist.xml
src/bson/: CMakeLists.txt  bson-inl.h  bsonDecimal.cpp  bsonDecimal.h  bson_db.h  bsonelement.h  bsonobj.cpp  bsonobj.h  bsonobjbuilder.h  common_decimal.c  common_decimal.cpp  common_decimal.h  common_decimal_fun.h  common_decimal_type.h  oid.cpp
src/bson/util/: builder.h  optime.h
src/dao/: CMakeLists.txt  daoCB.cpp  daoCB.hpp
src/dms/: CMakeLists.txt  dms.cpp  dmsBlockData.cpp  dmsBlockData.hpp  dmsBlockUnit.cpp  dmsBlockUnit.hpp  dmsExtent.hpp  dmsRecord.hpp  dmsSMEMgr.cpp  dmsSMEMgr.hpp  dmsScanner.cpp  dmsScanner.hpp
src/dps/: CMakeLists.txt  dps.cpp  dpsDef.hpp  dpsLogDef.hpp  dpsLogFile.cpp  dpsLogFile.hpp  dpsLogFileMgr.cpp  dpsLogFileMgr.hpp  dpsLogMgr.cpp  dpsLogMgr.hpp  dpsLogPage.cpp  dpsLogPage.hpp  dpsLogRecord.cpp  dpsLogRecord.hpp  dpsLogRecordDef.hpp  dpsMergeBlock.cpp  dpsMergeBlock.hpp  dpsMessageBlock.cpp  dpsMessageBlock.hpp  dpsPageMeta.hpp
src/include/: core.h  core.hpp  dms.hpp  dmsBlockUnit.hpp  dps.hpp  filenames.hpp  msg.h  msg.hpp  msgDef.h  msgDef.hpp  msgInterface.hpp  msgMessageFormat.hpp  msgTrace.h  msgTrace.hpp  netDef.hpp  netEventHandler.hpp  netEventSuit.hpp  netFrame.hpp  netMsgHandler.hpp  netMsgStream.hpp  netRoute.hpp  netRouteAgent.hpp  netService.hpp  netTimer.hpp  netTrace.h  netTrace.hpp  oss.h  oss.hpp  ossAtomic.hpp  ossAtomicBase.hpp  ossCmdRunner.hpp  ossCondition.hpp  ossDynamicLoad.hpp  ossEDU.hpp  ossErr.h  ossEvent.hpp  ossFeat.h  ossFeat.hpp  ossFile.hpp  ossIO.hpp  (+112 more)
src/msg/: CMakeLists.txt  msgMessageFormat.cpp
src/net/: CMakeLists.txt  echo.cpp  echo.hpp  netCB.cpp  netCB.hpp  netEventHandler.cpp  netEventSuit.cpp  netFrame.cpp  netRoute.cpp  netRouteAgent.cpp  netService.cpp
src/oss/: CMakeLists.txt  oss.c  ossCmdRunner.cpp  ossDynamicLoad.cpp  ossEDU.cpp  ossErr.cpp  ossEvent.cpp  ossFile.cpp  ossIO.cpp  ossLatch.cpp  ossMem.c  ossMem.cpp  ossMmap.cpp  ossNPipe.cpp  ossPath.cpp  ossPrimitiveFileOp.cpp  ossProc.cpp  ossRWMutex.cpp  ossSSLCertificate.c  ossSSLContext.c  ossSSLWrapper.c  ossShMem.cpp  ossSocket.cpp  ossStackDump.cpp  ossUtil.c  ossUtil.cpp  ossVer.c
src/pd/: CMakeLists.txt  pd.cpp  pdComponents.cpp  pdErr.cpp  pdFunctionList.cpp  pdTrace.cpp  pdTraceAnalysis.cpp
src/pmd/: CMakeLists.txt  pmdCBFactory.cpp  pmdCBMainEntry.cpp  pmdCBMainEntry.hpp  pmdCmdArg.cpp  pmdCmdArg.hpp  pmdContainer.cpp  pmdContainer.hpp  pmdController.cpp  pmdController.hpp  pmdEDU.cpp  pmdEDU.hpp  pmdEDUMgr.cpp  pmdEDUMgr.hpp  pmdEPFactory.cpp  pmdEnv.cpp  pmdEnv.hpp  pmdIFAdapter.cpp  pmdIFAdapter.hpp  pmdIOSvcEntry.cpp  pmdMain.cpp  pmdMainBaseCallback.cpp  pmdResource.cpp  pmdResource.hpp  pmdSignalHandler.cpp  pmdSignalHandler.hpp  pmdTool.cpp
src/programs/nova/: CMakeLists.txt  nova.cpp  nova.hpp  novabp.cpp
src/programs/novad/: CMakeLists.txt  main.cpp  novad.cpp
src/spt/: CMakeLists.txt  error.js  help.js  js_in_cpp.hpp  sdbSP.js  sptClassMetaInfo.cpp  sptClassMetaInfo.hpp  sptCommon.cpp  sptContainer.cpp  sptConvertor.cpp  sptConvertorHelper.cpp  sptFuncDef.cpp  sptFuncDef.hpp  sptGlobalFunc.cpp  sptHelp.cpp  sptHelp.hpp  sptInvoker.cpp  sptLibssh2Session.cpp  sptObjDesc.cpp  sptPrivateData.cpp  sptProperty.cpp  sptReturnVal.cpp  sptSPArguments.cpp  sptSPObject.cpp  sptSPScope.cpp  sptScope.cpp  sptSshSession.cpp  sptWords.cpp  sptWords.hpp
src/spt/usrdef/: sptBsonobj.cpp  sptBsonobjArray.cpp  sptUsrFileCommon.cpp  sptUsrSystemCommon.cpp
src/ssh2/: knownhost.c
src/test/: CMakeLists.txt  test.cpp
src/tests/: CMakeLists.txt
src/tests/dmstest/: CMakeLists.txt  main.cpp
src/tests/dpstest/: CMakeLists.txt  main.cpp
src/util/: CMakeLists.txt  utilBsonHash.cpp  utilCache.cpp  utilCommon.cpp  utilEnv.cpp  utilEnvCheck.cpp  utilFileStream.cpp  utilLinenoise.cpp  utilLinenoiseWrapper.cpp  utilMath.cpp  utilMemBlockPool.cpp  utilMemListPool.cpp  utilNodeOpr.cpp  utilOptions.cpp  utilParam.cpp  utilParamBase.cpp  utilPipe.cpp  utilStr.cpp  utilStream.cpp  utilText.cpp  utilUniqueID.cpp
test/: CMakeLists.txt
test/test/: CMakeLists.txt  test.cpp
third/mdocml/: CMakeLists.txt  SConscript
third/mdocml/lib/win64/: mdocml.lib  mdocmld.lib
third/mdocml/src/: cgi.c  common.c  common.h  compat_err.h  compat_stringlist.c  compat_vasprintf.h  config.h  main.c  make.bat  man_html.c  man_term.c  mandoc_aux.c  mandocdb.c  manpath.c  mansearch.c  mdoc_html.c  mdoc_man.c  mdoc_term.c  parseMandoc.c  read.c  soelim.c  tag.c  tag.h  term.c  term_ascii.c  term_ps.c  tree.c
third/ssh2/: CMakeLists.txt  libssh2_config.h
