INCLUDE_DIRECTORIES( "${NOVA_ROOT_DIR}/third/ssh2" )
INCLUDE_DIRECTORIES( "${NOVA_ROOT_DIR}/third/mdocml/src" )

IF( NOT WIN32 )
   SET( SPT_CXX_FLAGS "-Wno-invalid-offsetof -Wno-non-virtual-dtor" )
   SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${SPT_CXX_FLAGS}" )
   SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${SPT_CXX_FLAGS}" )
   SET( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS_DEBUG} )
ENDIF()

AUX_SOURCE_DIRECTORY( . SRC_FILES )
AUX_SOURCE_DIRECTORY( "${CMAKE_CURRENT_SOURCE_DIR}/usrdef" SUB_SRC_FILES )
LIST( APPEND SRC_FILES ${SUB_SRC_FILES} )
ADD_LIBRARY( spt STATIC ${SRC_FILES} )
